Enable nullable reference types

--- a/Source/GraphQLTemplate/Directory.Build.props
+++ b/Source/GraphQLTemplate/Directory.Build.props
@@ -9,6 +9,7 @@
 
   <PropertyGroup Label="Build">
     <LangVersion>latest</LangVersion>
+    <Nullable>enable</Nullable>
     <TreatWarningsAsErrors Condition="'$(TreatWarningsAsErrors)' == 'true'">true</TreatWarningsAsErrors>
   </PropertyGroup>
 
