--- a/Source/GraphQLTemplate/Source/GraphQLTemplate/GraphQLTemplate.csproj
+++ b/Source/GraphQLTemplate/Source/GraphQLTemplate/GraphQLTemplate.csproj
@@ -9,6 +9,7 @@
     <Azure>true</Azure>
     <PersistedQueries>true</PersistedQueries>
     <StyleCop>true</StyleCop>
+    <Subscriptions>true</Subscriptions>
     <Docker>true</Docker>
   </PropertyGroup>
   <!--#endif-->
@@ -50,7 +51,7 @@
     <PackageReference Include="HotChocolate.AspNetCore.Playground" Version="10.5.2" />
     <PackageReference Include="HotChocolate.AspNetCore.Voyager" Version="10.5.2" />
     <PackageReference Include="HotChocolate.PersistedQueries.Redis" Version="10.5.2" Condition="'$(PersistedQueries)' == 'true'" />
-    <PackageReference Include="HotChocolate.Subscriptions.InMemory" Version="10.5.2" />
+    <PackageReference Include="HotChocolate.Subscriptions.Redis" Version="10.5.2" Condition="'$(Subscriptions)' == 'true'" />
     <PackageReference Include="HotChocolate.Types.Filters" Version="10.5.2" />
     <PackageReference Include="HotChocolate.Types.Sorting" Version="10.5.2" />
     <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.14.0" Condition="'$(ApplicationInsights)' == 'true'" />
